Changelog
=========

1.0.2 (unreleased)
------------------

- Fixed querytarget of livesearch for Plone 4.2 and later.
  Use our @@livesearch_reply view instead of livesearch_reply.
  [buchi]

- Include description in snippetText.
  [buchi]


1.0.1 (2013-05-21)
------------------

- Monkey patching c.solr.search.Search.buildQuery in order to escape slahes in paths.
  [lgraf]

- Overwrite search extender: Add write permissions, fixed translations and
  allowed content types in textfield.
  [Julian Infanger]

- Added option to scale Word Cloud by a constant factor.
  [lgraf]

- Added basic portlet to display Word Cloud.
  [lgraf]

- Added basic Word Cloud browser view.
  [lgraf]


1.0a1 (2012-08-22)
------------------

- Initial release